WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 151966
Modern IDB: storage/indexeddb/factory-deletedatabase.html fails
https://bugs.webkit.org/show_bug.cgi?id=151966
Summary
Modern IDB: storage/indexeddb/factory-deletedatabase.html fails
Brady Eidson
Reported
2015-12-07 14:55:43 PST
Modern IDB: storage/indexeddb/factory-deletedatabase.html fails
Attachments
Patch v1
(2.74 KB, patch)
2015-12-07 14:57 PST
,
Brady Eidson
sam
: review+
sam
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2015-12-07 14:57:02 PST
Created
attachment 266816
[details]
Patch v1
Sam Weinig
Comment 2
2015-12-07 15:01:02 PST
Comment on
attachment 266816
[details]
Patch v1 View in context:
https://bugs.webkit.org/attachment.cgi?id=266816&action=review
> Source/WebCore/ChangeLog:11 > + * Modules/indexeddb/client/IDBOpenDBRequestImpl.cpp: > + (WebCore::IDBClient::IDBOpenDBRequest::onDeleteDatabaseSuccess):
This should have more detail.
Brady Eidson
Comment 3
2015-12-07 15:13:46 PST
http://trac.webkit.org/changeset/193658
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug