Modern IDB: storage/indexeddb/factory-deletedatabase.html fails. https://bugs.webkit.org/show_bug.cgi?id=151966 Source/WebCore:

Reviewed by Sam Weinig.

No new tests (At least one failing test now passes).

* Modules/indexeddb/client/IDBOpenDBRequestImpl.cpp:
(WebCore::IDBClient::IDBOpenDBRequest::onDeleteDatabaseSuccess): The spec says that the result of
  deleteDatabase should be undefined. Without explicitly making it undefined, it's incorrectly null.

LayoutTests:

Reviewed by Sam Weinig.

* platform/mac-wk1/TestExpectations:

Canonical link: https://commits.webkit.org/170107@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193658 268f45cc-cd09-0410-ab3c-d52691b4dbfc